Transition the nickname way when consolidating
marumari/textual-theme-technical/d4632bc2cdacf0ded78c2583b7ebb0cf0cb0513
f

--- a/design.css
+++ b/design.css
@@ -19,6 +19,11 @@ body {
 	overflow-y: visible;
 }
 
+body .f {
+	-webkit-transition: color 1s;
+	-transition: color 1s;
+}
+
 p {
 	overflow: visible !important;
 }
