--- a/design.css
+++ b/design.css
@@ -229,7 +229,8 @@ body[dir=ltr] div[ltype=action] .sender:before {
 }
 
 /* Historic / Log readback */
-.historic {
+#historic_messages,
+#body_home > .historic {
 	opacity: 0.6;
 }
 
