Change event colour

--- a/design.css
+++ b/design.css
@@ -454,7 +454,7 @@ body div.line[ltype=website] {
   font-size: 85%;
   min-height: 19px;
   padding-left: 145px;
-  color: #a5b6ce;
+  color: #8ba4cf;
   background: #20262b;
 }
 
