--- a/design.css
+++ b/design.css
@@ -12,7 +12,7 @@ body {
   color: #fff;
   z-index: 100;
   font-size: 12px;
-  background-color: #20262b;
+  background-color: #192128;
   font-family: system, -apple-system,
       ".SFNSDisplay-Regular", "Helvetica Neue", "Lucida Grande";
   font-weight: 400;
