Add missing highlight background

--- a/design.css
+++ b/design.css
@@ -339,6 +339,7 @@ body div.line[ltype=action] .message {
 
 body div.line[ltype=action][highlight=true] .message {
   color: #f2f2f2 !important;
+  background: #518c7c;
 }
 
 /* DEBUG/INVITE */
@@ -551,4 +552,5 @@ body div.line[ltype=action][highlight=true] {
   font-weight: normal;
   padding-top: 3px;
   padding-bottom: 3px;
+  background: #518c7c;
 }
