Adjust highlight colour shade

--- a/design.css
+++ b/design.css
@@ -552,5 +552,5 @@ body div.line[ltype=action][highlight=true] {
   font-weight: normal;
   padding-top: 3px;
   padding-bottom: 3px;
-  background: #518c7c;
+  background: #2b494d;
 }
